--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -28,8 +28,7 @@ jobs:
           COMMIT_JOIN: ${{ join(github.event.commits.*.message, ', ') }}
         run: echo "$COMMIT_JOIN"
       - name: testing cointains
-        if: ${{ contains(join(github.event.commits.*.message, ', '), 'testing') }}
-        if: ${{ contains(join(github.event.commits.*.message, ', '), 'contains') }}
+        if: ${{ contains(join(github.event.commits.*.message, ', '), 'testing') }} and ${{ contains(join(github.event.commits.*.message, ', '), 'contains') }}
         env:
           COMMIT_CONTAINS: ${{ !contains(join(github.event.commits.*.message, ', '), '#skip') }}
         run: echo "$COMMIT_CONTAINS"
