--- a/.github/workflows/urlPingTest.yaml
+++ b/.github/workflows/urlPingTest.yaml
@@ -1,10 +1,9 @@
 name: Url ping test to Heroku
 
 on:
-  push:
-    branches:
-      - master
-      - pingtest
+  schedule:
+    - cron: '30 5,17 * * *'
+
 jobs:
   urlPingTest:
     runs-on: ubuntu-latest
@@ -13,10 +12,7 @@ jobs:
         uses: jtalk/url-health-check-action@v2
         with:
           url: https://shrouded-stream-54830.herokuapp.com/health
-          # Follow redirects, or just report success on 3xx status codes
-          follow-redirect: false # Optional, defaults to "false"
-          # Fail this action after this many failed attempts
-          max-attempts: 3 # Optional, defaults to 1
-          retry-delay: 5s # Optional, only applicable to max-attempts > 1
-          # Retry all errors, including 404. This option might trigger curl upgrade.
-          retry-all: false # Optional, defaults to "false"
+          follow-redirect: false 
+          max-attempts: 3
+          retry-delay: 5s 
+          retry-all: false 
