--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,7 +28,7 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:3003
       - name: deploy
-        uses: akhileshns/heroku-deploy
+        uses: akhileshns/heroku-deploy@v3.12.12
         with: 
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: vast-springs-05175
