--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,7 +24,7 @@ jobs:
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
-          command: npm run test:e2e
+          command: npm run test:e2e --ignore-gpu-blocklist
           start: npm run start-prod
           wait-on: http://localhost:3003
       - name: deploy
