--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,12 +21,12 @@ jobs:
         run: npm run build
       - name: test
         run: npm run test
-      # - name: e2e tests
-      #   uses: cypress-io/github-action@v2
-      #   with:
-      #     command: npm run test:e2e
-      #     start: npm run start-prod
-      #     wait-on: http://localhost:5000
+      - name: e2e tests
+        uses: cypress-io/github-action@v2
+        with:
+          command: npm run test:e2e
+          start: npm run start-prod
+          wait-on: http://localhost:5000
       - name: deploy to heroku
         uses: akhileshns/heroku-deploy@v3.12.12 
         with:
@@ -35,3 +35,4 @@ jobs:
           heroku_email: "yumo.luo@hotmail.com"
           healthcheck: "https://whispering-waters-52105.herokuapp.com/health"
           checkstring: "ok"
+          rollbackonhealthcheckfailed: true
