--- a/.github/workflows/healthCheck.yml
+++ b/.github/workflows/healthCheck.yml
@@ -4,6 +4,12 @@ name: Periodic health check
 #   schedule:
 #     - cron:  '0 22 * * *'
 
+on:
+  push:
+    branches:
+      - master
+      - branch1
+
 jobs:
   health_check:
     runs-on: ubuntu-18.04
