trying different config

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,8 +23,8 @@ jobs:
         run: npm run test
       - name: e2e tests
         uses: cypress-io/github-action@v2
+        run: npx cypress cache path
         with:
-          command: npx cypress cache path
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:3003
