--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,7 +24,7 @@ jobs:
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
-          command: | 
+          run: | 
           npx cypress cache path
           npm run test:e2e
           start: npm run start-prod
