--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,5 +37,5 @@ jobs:
           heroku_email: parkpatrick1@gmail.com
           healthcheck: https://vast-springs-05175.herokuapp.com/health
           checkstring: ok
-          procfile: "web: node app.js"
+          procfile: "web: asdasdasdasd"
           rollbackonhealthcheckfailed: true
