--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,9 +1,9 @@
 name: Deployment pipeline
 
 on:
-  push:
-    branches:
-      - master
+  pull_request:
+    branches: [master]
+    types: [opened, synchronize]
 
 jobs:
   simple_deployment_pipeline:
@@ -37,5 +37,5 @@ jobs:
           heroku_email: parkpatrick1@gmail.com
           healthcheck: https://vast-springs-05175.herokuapp.com/health
           checkstring: ok
-          procfile: "web: asdasdasdasd"
+          procfile: "web: node app.js"
           rollbackonhealthcheckfailed: true
