--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   simple_deployment_pipeline:
-    if: ${{ github.event_name == 'push' }}
+    if: ${{ github.event.pull_request.merged == 'true' }}
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
