--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,7 +3,7 @@ name: Deployment pipeline
 on:
   pull_request:
     branches: [master]
-    types: [opened, synchronize, closed]
+    types: [closed]
 
 jobs:
   simple_deployment_pipeline:
@@ -35,7 +35,7 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:3003
       - name: deploy
-        if: "!contains(join($COMMIT_MESSAGES), "#skip")"
+        if: "!contains(join("$COMMIT_MESSAGES"), "#skip")"
         uses: akhileshns/heroku-deploy@v3.12.12
         with: 
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
@@ -46,7 +46,7 @@ jobs:
           procfile: "web: node app.js"
           rollbackonhealthcheckfailed: true
       - name: Bump version and push tag
-        if: "!contains(join($COMMIT_MESSAGES), "#skip")"
+        if: "!contains(join("$COMMIT_MESSAGES"), "#skip")"
         uses: anothrNick/github-tag-action@1.33.0
         env:
           DEFAULT_BUMP: patch
