--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,3 +33,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: pokedex-app-openstack #Must be unique in Heroku
           heroku_email: santiagobn1@gmail.com
+          healthcheck: "https://pokedex-app-openstack.herokuapp.com/health"
+          checkstring: "ok"
