--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,7 +36,7 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:3003
       - name: deploy
-        if: contains(env.COMMIT_MESSAGES_STRING, "\#skip") == false
+        if: "!contains(env.COMMIT_MESSAGES_STRING, '\#skip')"
         uses: akhileshns/heroku-deploy@v3.12.12
         with: 
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
@@ -47,7 +47,7 @@ jobs:
           procfile: "web: node app.js"
           rollbackonhealthcheckfailed: true
       - name: Bump version and push tag
-        if: contains(env.COMMIT_MESSAGES_STRING, "\#skip") == false
+        if: "!contains(env.COMMIT_MESSAGES_STRING, '\#skip')"
         uses: anothrNick/github-tag-action@1.33.0
         env:
           DEFAULT_BUMP: patch
