--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -51,5 +51,5 @@ jobs:
         uses: anothrNick/github-tag-action@1.33.0
         env:
           DEFAULT_BUMP: patch
-          DRY_RUN: true
+          DRY_RUN: false
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
