--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -9,5 +9,4 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - name: print hello
-        run: |
-        echo "Hello World!"
+        run:  echo "Hello World!"
