Made the pipeline run eslint

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
 jobs: 
-  deployment pipeline:
+  deployment_pipeline:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
