eslint should fix the errors now, also silence console logs errors

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -15,4 +15,4 @@ jobs:
       - name: npm install
         run: npm install
       - name: lint the code
-        run: npm run eslint
+        run: npm run eslint --fix
