--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -16,3 +16,7 @@ jobs:
         run: npm install
       - name: lint the code
         run: npm run eslint --fix
+      - name: build
+        run: npm run build
+      - name: test
+        run: npm run test
