--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,18 +14,18 @@ jobs:
     env:
       COMMIT_NOT_CONTAINS_SKIP_STRING: ${{ !contains(join(toJson(github.event.commits.*.message)), '#skip') }}
     steps:
-      - name: gihub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo $GITHUB_CONTEXT. GLobal env variable $COMMIT_NOT_CONTAINS_SKIP_STRING
-      - name: commits
-        env:
-          COMMITS: ${{ toJson(github.event.commits) }}
-        run: echo "$COMMITS"
-      - name: commit messages
+      # - name: gihub context
+      #   env:
+      #     GITHUB_CONTEXT: ${{ toJson(github) }}
+      #   run: echo $GITHUB_CONTEXT. GLobal env variable $COMMIT_NOT_CONTAINS_SKIP_STRING
+      # - name: commits
+      #   env:
+      #     COMMITS: ${{ toJson(github.event.commits) }}
+      #   run: echo "$COMMITS"
+      - name: print env variable
         env:
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
-        run: echo "$COMMIT_MESSAGES"
+        run: echo env.COMMIT_NOT_CONTAINS_SKIP_STRING
       - name: joined commit message
         env:
           CHECKED_JOINED_COMMIT_MESSAGE: ${{ contains(join(toJson(github.event.commits.*.message)), '#skip') }}
