--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  simple_deployment_pipeline
+  simple_deployment_pipeline:
     runs-on: ubuntu-18.04
     steps:
       - uses: action/checkout@v2
@@ -17,3 +17,5 @@ jobs:
         run: npm install
       - name: lint
         run: npm run eslint
+
+        
