--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,12 +9,12 @@ jobs:
   simple_deployment_pipeline:
     runs-on: ubuntu-18.04
     steps:
-      - uses: action/checkout@v2
-      - uses: action/setup-node@v1
-        with: 
-          node-version: "12.x"
-      - name: npm install
-        run: npm install
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      - name: npm install 
+        run: npm install  
       - name: lint
         run: npm run eslint
 
