--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,10 +12,12 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '12.x'
-      - name: npm install 
-        run: npm install  
+          node-version: "12.x"
+      - name: npm install
+        run: npm install
       - name: lint
         run: npm run eslint
-
-        
+      - name: build
+        run: webpack --mode production
+      - name: test
+        run: jest
