--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,6 +18,6 @@ jobs:
       - name: lint
         run: npm run eslint
       - name: build
-        run: webpack --mode production
+        run: npm run build
       - name: test
-        run: jest
+        run: npm run test
