--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -13,10 +13,10 @@ jobs:
         run: |
           echo "Hello World!"
 
-      - name: Print date
+      - name: Now it is
         run: |
           date
-          
-      -name: Print ls
+
+      - name: Directory content
         run: |
           ls
