--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Lint code
-        run: npm run lint
+        run: npm run eslint
