--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,3 +17,7 @@ jobs:
         run: npm install
       - name: Lint code
         run: npm run eslint
+      - name: Build app
+        run: npm run build
+      - name: Lint code
+        run: npm test
