--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,5 +19,5 @@ jobs:
         run: npm run eslint
       - name: Build app
         run: npm run build
-      - name: Test app
+      - name: Run tests
         run: npm test
