--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,3 +32,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: 'pokedex-pipeline-app'
           heroku_email: 'kavanderjanne@gmail.com'
+          healthcheck: 'https://pokedex-pipeline-app.herokuapp.com/healthcheck'
+          checkstring: 'ok'
