--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,3 +34,4 @@ jobs:
           heroku_email: 'kavanderjanne@gmail.com'
           healthcheck: 'https://pokedex-pipeline-app.herokuapp.com/healthcheck'
           checkstring: 'ok'
+          rollbackonhealthcheckfailed: true
