--- a/.github/workflows/hello_world_job.yml
+++ b/.github/workflows/hello_world_job.yml
@@ -38,6 +38,5 @@ jobs:
         run: | 
          echo test, and deploy your project.
       - name: |
-          echo date
-      - name: |
-          ls -l
+          echo test
+      
