--- a/.github/workflows/hello_world_job.yml
+++ b/.github/workflows/hello_world_job.yml
@@ -38,5 +38,5 @@ jobs:
         run: | 
          echo test, and deploy your project.
       - name: |
-          echo test
+          echo date
       
