--- a/.github/workflows/hello_world_job.yml
+++ b/.github/workflows/hello_world_job.yml
@@ -37,6 +37,7 @@ jobs:
       - name: Run hello
         run: | 
          echo test, and deploy your project.
-      - name: |
-          echo date
+      - name: List
+        run: |
+          echo ls -l
       
