--- a/.github/workflows/hello_world_job.yml
+++ b/.github/workflows/hello_world_job.yml
@@ -42,5 +42,5 @@ jobs:
           echo ls -l
       - name: Run Date
         run: |
-          echo date --date=STRING
+          echo date, sss
       
