--- a/.github/workflows/hello_world_job.yml
+++ b/.github/workflows/hello_world_job.yml
@@ -41,6 +41,6 @@ jobs:
         run: |
           echo ls -l
       - name: Run Date
-        run: |
-          echo date, sss
+        run: | 
+         echo date
       
