--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,3 +32,6 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "pokemon-app-25" #Must be unique in Heroku
           heroku_email: "bc.chew.hong.ee@gmail.com"
+          healthcheck: "https://pokemon-app-25.herokuapp.com/health"
+          checkstring: "ok"
+          delay: 5
