--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -11,8 +11,6 @@ jobs:
     steps:
       - name: Say hello
         run: |
-          echo "Hello World!"
-        run: |
-          date
-        run: |
+          echo "Hello World!" &&
+          date  &&
           ls -l
