Third try with cypress

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,7 +13,6 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12.x'
-      - uses: cypress-io/github-action@v2
       - name: npm install
         run: npm install
       - name: lint
@@ -23,6 +22,7 @@ jobs:
       - name: test
         run: npm run test
       - name: e2e tests
+          uses: cypress-io/github-action@v2
           with:
             command: npm run test:e2e
             start: npm run start-prod
