--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,3 +33,4 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_SECRET}}
           heroku_app_name: "fullstackopen21-pokedex" #Must be unique in Heroku
           heroku_email: "vilhelm.toivonen@gmail.com"
+          healthcheck: "https://fullstackopen21-pokedex.herokuapp.com/health"
