--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -20,3 +20,8 @@ jobs:
         run: npm run build
       - name: test
         run: npm run test
+      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
