--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -25,3 +25,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
           heroku_email: ${{secrets.HEROKU_EMAIL}}
+          healthcheck: 'https://pokemon-devops.herokuapp.com/health'
+          checkstring: 'ok'
