--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "eslint": "eslint './**/*.{js,jsx}'",
     "build": "webpack --mode production",
     "test:e2e": "cypress open",
-    "test-headless:e2e": "cypress run"
+    "test-headless:e2e": "cypress run",
+    "deploy": "git push heroku master"
   },
   "repository": {
     "type": "git",
