--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,4 +32,4 @@ jobs:
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: infinite-fjord-60355
-          heroku_emial: edimitrov1@gmail.com
+          heroku_email: edimitrov1@gmail.com
