--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - master
+  pull_request:
+    branches: [master]
+    types: [opened, synchronize]
 jobs: 
   deployment_pipeline:
     runs-on: ubuntu-18.04
@@ -20,7 +23,8 @@ jobs:
         run: npm run build
       - name: test
         run: npm run test
-      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+      - if: ${{ github.event_name == 'push' }}
+        uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
