--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -43,6 +43,7 @@ jobs:
 
   bump_and_tag_pipeline:
     runs-on: ubuntu-18.04
+    needs: simple_deployment_pipeline
     steps:
       - uses: actions/checkout@v2
       - name: Bump version and push tag
