--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,3 +32,4 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: 'arcane-shore-84681'
           heroku_email: 'abdalmajeed718@gmail.com'
+          healthcheck: 'https://arcane-shore-84681.herokuapp.com/health'
