--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "webpack-dev-server --open --mode development",
-    "start-prod": "node app.js",
+    "start-prod": "node app2.js",
     "test": "jest",
     "eslint": "eslint \"./**/*.{js,jsx}\" --fix",
     "build": "webpack --mode production",
