--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,6 +28,9 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
       - name: deploy
+      - run: |
+          git remote add heroku git@heroku.com:pokedex.app.git
+          git push heroku master
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
