--- a/.github/workflows/testing-stuff.yml
+++ b/.github/workflows/testing-stuff.yml
@@ -22,3 +22,13 @@ jobs:
         env:
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
         run: echo "$COMMIT_MESSAGES"
+      - name: without json
+        env:
+          COMMIT_MESSAGES2: ${{ github.event.commits.*.message}}
+        run: echo "$COMMIT_MESSAGES2"
+      # - name: join
+      #   env:
+      #     JOINED: ${{ join(github.event.commits.*.message) }}
+      - name: contains
+        env:
+          CONTAINS: ${{ contains(github.event.commits.*.message, 'test')}}
