added run command

--- a/.github/workflows/testing-stuff.yml
+++ b/.github/workflows/testing-stuff.yml
@@ -32,3 +32,4 @@ jobs:
       - name: contains
         env:
           CONTAINS: ${{ contains(github.event.commits.*.message, 'test')}}
+        run: echo "$CONTAINS"
