--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest",
     "eslint": "eslint './**/*.{js,jsx}'",
     "build": "webpack --mode production",
-		"test:e2e": "cypress run",
+    "test:e2e": "cypress run",
     "test:e2e:open": "cypress open"
   },
   "repository": {
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "dotenv": "^14.2.0",
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
