--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,4 +33,4 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "rogers-pokedex" #Must be unique in Heroku
           heroku_email: "rogelio.camargo2016@gmail.com"
-          healthcheck: "https://rogers-pokedex.herokuapp.com/health
+          healthcheck: "https://rogers-pokedex.herokuapp.com/health"
