--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,3 +34,5 @@ jobs:
           heroku_app_name: "rogers-pokedex" #Must be unique in Heroku
           heroku_email: "rogelio.camargo2016@gmail.com"
           healthcheck: "https://rogers-pokedex.herokuapp.com/health"
+          checkstring: "ok"
+          rollbackonhealthcheckfailed: true
