--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -20,8 +20,8 @@ jobs:
       - name: build
         run: npm run build
       - name: test
-        run: npm run tests
-      - name: e2e test
+        run: npm run test
+      - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
           command: npm run test:e2e
