--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -33,4 +33,6 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
           heroku_email: ${{secrets.HEROKU_EMAIL}}
-          procfile: "web: npm run start-prod"
+          procfile: web: npm run start-prod
+          healthcheck: https://${{secrets.HEROKU_APP_NAME}}.herokuapp.com/health
+          checkstring: "ok"
