part 11 ex 12 broken push

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -36,3 +36,4 @@ jobs:
           procfile: 'web: npm run start-prod'
           healthcheck: 'https://${{secrets.HEROKU_APP_NAME}}.herokuapp.com/health'
           checkstring: 'ok'
+          rollbackonhealthcheckfailed: true
