--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -41,6 +41,7 @@ jobs:
           healthcheck: 'https://${{secrets.HEROKU_APP_NAME}}.herokuapp.com/health'
           checkstring: 'ok'
           rollbackonhealthcheckfailed: true
+      - uses: actions/checkout@v2
       - name: Bump version and push tag
         if: github.event_name == 'push'
         uses: anothrNick/github-tag-action@1.33.0
