--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -11,4 +11,10 @@ jobs:
     steps:
       - name: Say hello
         run: |
-          echo "Hello World!"
+          echo "Hello World!" 
+      - name: Now it is
+        run: |
+          date
+      - name: Directory Content
+        run: |
+          ls -l
